--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="title_notifications">Notifications</string>
     <string name="profile">Profile</string>
     <string name="img_location">img_location</string>
+    <string name="logout">Logout</string>
 </resources>
